UPLOADING LATEST BUILD from crappy school laptop

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Cottage SMP</title>
+    <title>Will Hanighen | amature programer and aquarium enthusiast</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/ico" href="icon.ico">
 </head>
@@ -14,19 +14,19 @@
         <header>
             <div class="header">
                 <div class="dropdown">
-                    <span>A basic web template</span>
+                    <span>Will Hanighen | amature programer and aquarium enthusiast</span>
                     <div class="dropdown-content">
-                        <a href="/index.html">Main page</a>
-                        <a href="/license.html">License</a>
+                        <a href="/index.html">Main</a>
+                        <a href="/resume.html">Resume</a>
+                        <a href="/contact.html">Contact info</a>
                     </div>
                 </div>
             </div>
         </header>
 
-        <br><br>
-        <h1>Welcome, to my basic web template</h1><br>
-        <h3>yep.. this is everything</h3><br>
-        <h4>hover over the headder though</h4>
+        <br><br><br>
+
+        <!-- page content here -->
 
 </body>
 
