--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,7 @@
 
         <br><br><br>
 
-        <a href="mailto:willplays2022@gmail.com">My email</a> <p>willplays2022@gmail.com</p><br>
-        <a href="mailto:jhanighen1@gmail.com">mother's emai</a> <p>jhanighen1@gmail.com</p><br>
-        
+        <p>William P. Hanighen<br><br>willplays2022@gmail.com<br><br>(479) 353-5587<br><br><br>Jean Hanighen<br><br>jhanighen1@gmail.com<br><br>(404) 216-3716</p>
 
 
 </body>
