upload from school PC

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will Hanighen | amature programer and aquarium enthusiast</title>
+    <title>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/ico" href="icon.ico">
 </head>
@@ -14,20 +14,61 @@
         <header>
             <div class="header">
                 <div class="dropdown">
-                    <span>Will Hanighen | amature programer and aquarium enthusiast</span>
+                    <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
                     <div class="dropdown-content">
                         <a href="/index.html">Main</a>
                         <a href="/resume.html">Resume</a>
-                        <a href="/contact.html">Contact info</a>
+                        <a href="/contact.html">Contact Info</a>
                     </div>
                 </div>
             </div>
         </header>
 
-        <br><br><br>
+        <br><br>
 
-        <!-- page content here -->
+        <h1>Welcome to My Website!</h1>
+        <p>Hi! I'm Will Hanighen, an amateur programmer and aquarium enthusiast.</p>
 
+        <section>
+            <h2>Programming Projects</h2>
+            <p>Check out some of my coding projects:</p>
+            <ul>
+                <li><a href="https://github.com/willhanighenschool" target="_blank" rel="noopener noreferrer">School githubaccount</a></li>
+                <li><a href="https://github.com/willhanighen" target="_blank" rel="noopener noreferrer">Main github account</a></li>
+                <li><a href="#" target="_blank" rel="noopener noreferrer">placeholder</a></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Aquarium Gallery</h2>
+            <div class="image-container">
+                <div class="image-wrapper">
+                    <img src="imgs/ICBM.png" alt="Betta tank">
+                    <a href="https://docs.google.com/document/d/1K6eg-FDqM4MBJlLj8Hg6s4tQ2_rR9wu5ENhRcIIWJe0/edit" target="_blank" rel="noopener noreferrer">Betta tank | shopping list</a>
+                </div>
+
+                <div class="image-wrapper">
+                    <img src="imgs/placeholder.png" alt="This is a placeholder">
+                    <p>This is a development placehholder</p>
+                </div>
+               <!-- add more as needed (use div class immage-wrapper) -->
+            </div>
+            <h2>Other photos</h2>
+            <div class="image-container">
+                <div class="image-wrapper">
+                    <img src="imgs/at school.jpg" alt="Me at school">
+                    <p>Me at school</p>
+                </div>
+
+                <div class="image-wrapper">
+                    <img src="imgs/placeholder.png" alt="This is a placeholder">
+                    <p>more artifacts from development</p>
+                </div>
+                <!-- add more as needed (use div class immage-wrapper) -->
+        </section>
+        
+
+    </div>
 </body>
 
 </html>
