--- a/resume.html
+++ b/resume.html
@@ -24,9 +24,10 @@
             </div>
         </header>
 
-        <br><br><br>
+        <br><br>
 
-        <!-- page content here -->
+        <h1>placeholder text - resume not complete</h1>
+        <!-- add more -->
         
 
 </body>
