--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,13 @@
             </div>
         </header>
 
-        <br><br><br>
+        <br><br>
 
-        <p>William P. Hanighen<br><br>willplays2022@gmail.com<br><br>(479) 353-5587<br><br><br>Jean Hanighen<br><br>jhanighen1@gmail.com<br><br>(404) 216-3716</p>
+        <h1>Contacts</h1>
 
+        <p><strong>William P. Hanighen</strong><br>willplays2022@gmail.com<br>(479) 353-5587
+        <br><br><strong>Jean Hanighen</strong><br>jhanighen1@gmail.com<br>(404) 216-3716
+        <br><br><strong>John Hanighen</strong><br>johnhanighen@gmail.com<br>(248) 228-6029</p>
 
 </body>
 
