--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="top">
         <header>
             <div class="header">
                 <div class="dropdown">
@@ -43,12 +43,12 @@
             <h2>Aquarium Gallery</h2>
             <div class="image-container">
                 <div class="image-wrapper">
-                    <img src="imgs/ICBM.png" alt="Betta tank">
+                    <img src="img/ICBM.png" alt="Betta tank">
                     <a href="https://docs.google.com/document/d/1K6eg-FDqM4MBJlLj8Hg6s4tQ2_rR9wu5ENhRcIIWJe0/edit" target="_blank" rel="noopener noreferrer">Betta tank | shopping list</a>
                 </div>
 
                 <div class="image-wrapper">
-                    <img src="imgs/placeholder.png" alt="This is a placeholder">
+                    <img src="img/placeholder.png" alt="This is a placeholder">
                     <p>This is a development placehholder</p>
                 </div>
                <!-- add more as needed (use div class immage-wrapper) -->
@@ -56,19 +56,23 @@
             <h2>Other photos</h2>
             <div class="image-container">
                 <div class="image-wrapper">
-                    <img src="imgs/at school.jpg" alt="Me at school">
+                    <img src="img/at school.jpg" alt="Me at school">
                     <p>Me at school</p>
                 </div>
 
                 <div class="image-wrapper">
-                    <img src="imgs/placeholder.png" alt="This is a placeholder">
+                    <img src="img/placeholder.png" alt="This is a placeholder">
                     <p>more artifacts from development</p>
                 </div>
                 <!-- add more as needed (use div class immage-wrapper) -->
+                </div>
         </section>
-        
+    
+     <a href="#top" id="button">Go to page top</a>
 
     </div>
+
+
 </body>
 
 </html>
