--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="top">
         <header>
             <div class="header">
                 <div class="dropdown">
@@ -29,7 +29,7 @@
         <h1>placeholder text - resume not complete</h1>
         <!-- add more -->
         
-
+        <a href="#top"> Go to page top</a>
 </body>
 
 </html>
