--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container" id="top">
         <header>
             <div class="header">
                 <div class="dropdown">
