upload latest from school PC cuz i cant view the changes live while having the repo open ins VS code cuz school rules

--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
 
         <h1>Contacts</h1>
 
-        <p><strong>William P. Hanighen</strong><br>willplays2022@gmail.com<br>(479) 353-5587
-        <br><br><strong>Jean Hanighen</strong><br>jhanighen1@gmail.com<br>(404) 216-3716
-        <br><br><strong>John Hanighen</strong><br>johnhanighen@gmail.com<br>(248) 228-6029</p>
+        <p><strong>William P. Hanighen</strong><br>willplays2022@gmail.com<br>(479) 353-5587<br><br>
+        <strong>Jean Hanighen</strong><br>jhanighen1@gmail.com<br>(404) 216-3716<br><br>
+        <strong>John Hanighen</strong><br>johnhanighen@gmail.com<br>(248) 228-6029</p>
 
 </body>
 
