--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will Hanighen | amature programer and aquarium enthusiast</title>
+    <title>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/ico" href="icon.ico">
+    <style>
+    </style>
 </head>
 
 <body>
@@ -14,11 +16,11 @@
         <header>
             <div class="header">
                 <div class="dropdown">
-                    <span>Will Hanighen | amature programer and aquarium enthusiast</span>
+                    <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
                     <div class="dropdown-content">
                         <a href="/index.html">Main</a>
                         <a href="/resume.html">Resume</a>
-                        <a href="/contact.html">Contact info</a>
+                        <a href="/contact.html">Contact Info</a>
                     </div>
                 </div>
             </div>
@@ -26,10 +28,46 @@
 
         <br><br>
 
-        <h1>placeholder text - resume not complete</h1>
-        <!-- add more -->
-        
-        <a href="#top"> Go to page top</a>
+        <h1>Will Hanighen</h1>
+        <h2>Amateur Programmer and Aquarium Enthusiast</h2>
+
+        <section>
+            <h3>Education</h3>
+            <ul>
+                <li><a href="#placeholder">placeholder</a></li>
+                <!-- add more as needed -->
+            </ul>
+        </section>
+
+        <section>
+            <h3>Work Experience</h3>
+            <ul>
+                <li><a href="#placeholder">placeholder</a></li>
+                <!-- add more as needed -->
+            </ul>
+        </section>
+
+        <section>
+            <h3>Skills</h3>
+            <ul>
+                <li>Coding</li><br>
+                <li>Aquarium research</li><br>
+                <!-- Add more skills as acquired -->
+            </ul>
+        </section>
+
+        <section>
+            <h3>Projects</h3>
+            <ul>
+                <li><a href="#placeholder">placeholder</a></li>
+                <!-- add more as needed -->
+            </ul>
+        </section>
+
+        <footer>
+            <a href="#top">Go to Page Top</a>
+        </footer>
+    </div>
 </body>
 
 </html>
