upload latest from school PC cuz i cant view the changes live while having the repo open ins VS code cuz school rules

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <div class="inner-cursor"></div>
+    <div class="outer-cursor"></div>
+    <script src="trail.js"></script>
+    <script src="cusror.js"></script>
     <div class="container" id="top">
         <header>
             <div class="header">
