--- a/index.html
+++ b/index.html
@@ -1,78 +1,71 @@
-<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" type="image/ico" href="icon.ico">
-</head>
-
-<body>
-    <div class="container" id="top">
-        <header>
-            <div class="header">
-                <div class="dropdown">
-                    <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
-                    <div class="dropdown-content">
-                        <a href="/index.html">Main</a>
-                        <a href="/resume.html">Resume</a>
-                        <a href="/contact.html">Contact Info</a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" type="image/ico" href="icon.ico">
+    </head>
+    <body>
+        <div class="inner-cursor"></div>
+        <div class="outer-cursor"></div>
+        <script src="trail.js"></script>
+        <script src="cusror.js"></script>
+        <div class="container" id="top">
+            <header>
+                <div class="header">
+                    <div class="dropdown">
+                        <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
+<div class="dropdown-content">
+                            <a href="/index.html">Main</a><a href="/resume.html">Resume</a><a href="/contact.html">Contact Info</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </header>
-
-        <br><br>
-
-        <h1>Welcome to My Website!</h1>
-        <p>Hi! I'm Will Hanighen, an amateur programmer and aquarium enthusiast.</p>
-
-        <section>
-            <h2>Programming Projects</h2>
-            <p>Check out some of my coding projects:</p>
-            <ul>
-                <li><a href="https://github.com/willhanighenschool" target="_blank" rel="noopener noreferrer">School github account</a></li>
-                <li><a href="https://github.com/willhanighen" target="_blank" rel="noopener noreferrer">Main github account</a></li>
-                <li><a href="#" target="_blank" rel="noopener noreferrer">placeholder</a></li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Aquarium Gallery</h2>
-            <div class="image-container">
-                <div class="image-wrapper">
-                    <img src="img/ICBM.png" alt="Betta tank">
-                    <a href="https://docs.google.com/document/d/1K6eg-FDqM4MBJlLj8Hg6s4tQ2_rR9wu5ENhRcIIWJe0/edit" target="_blank" rel="noopener noreferrer">Betta tank | shopping list</a>
+            </header>
+            <br><br>
+            <h1>Welcome to My Website!</h1>
+            <p>Hi! I'm Will Hanighen, an amateur programmer and aquarium enthusiast.</p>
+            <section>
+                <h2>Programming Projects</h2>
+                <p>Check out some of my coding projects:</p>
+                <ul>
+                    <li>
+                        <a href="https://github.com/willhanighenschool" target="_blank" rel="noopener noreferrer">School githubaccount</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/willhanighen" target="_blank" rel="noopener noreferrer">Main github account</a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank" rel="noopener noreferrer">placeholder</a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Aquarium Gallery</h2>
+                <div class="image-container">
+                    <div class="image-wrapper">
+                        <img src="img/ICBM.png" alt="Betta tank"><a href="https://docs.google.com/document/d/1K6eg-FDqM4MBJlLj8Hg6s4tQ2_rR9wu5ENhRcIIWJe0/edit" target="_blank" rel="noopener noreferrer">Betta tank | shopping list</a>
+                    </div>
+                    <div class="image-wrapper">
+                        <img src="img/placeholder.png" alt="This is a placeholder">
+<p>This is a development placehholder</p>
+                    </div>
+                    <!-- add more as needed (use div class immage-wrapper) -->
                 </div>
-
-                <div class="image-wrapper">
-                    <img src="img/placeholder.png" alt="This is a placeholder">
-                    <p>This is a development placehholder</p>
+                <h2>Other photos</h2>
+                <div class="image-container">
+                    <div class="image-wrapper">
+                        <img src="img/at school.jpg" alt="Me at school">
+<p>Me at school</p>
+                    </div>
+                    <div class="image-wrapper">
+                        <img src="img/placeholder.png" alt="This is a placeholder">
+<p>more artifacts from development</p>
+                    </div>
+                    <!-- add more as needed (use div class immage-wrapper) -->
                 </div>
-               <!-- add more as needed (use div class immage-wrapper) -->
-            </div>
-            <h2>Other photos</h2>
-            <div class="image-container">
-                <div class="image-wrapper">
-                    <img src="img/at school.jpg" alt="Me at school">
-                    <p>Me at school</p>
-                </div>
-
-                <div class="image-wrapper">
-                    <img src="img/placeholder.png" alt="This is a placeholder">
-                    <p>more artifacts from development</p>
-                </div>
-                <!-- add more as needed (use div class immage-wrapper) -->
-                </div>
-        </section>
-    
-     <a href="#top" id="button">Go to page top</a>
-
-    </div>
-
-
-</body>
-
+            </section>
+            <a href="#top" id="button">Go to page top</a>
+        </div>
+    </body>
 </html>
