better CSS and a scroll to top button (im lazy and a very bad web/frontend dev)

--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,13 @@
     <div class="outer-cursor"></div>
     <script src="trail.js"></script>
     <script src="cusror.js"></script>
+    <button onclick="goTop()" id="goTop" title="Go to page top">Top</button>
+    <script src="scrolltop.js"></script>
     <div class="container" id="top">
         <header>
             <div class="header">
                 <div class="dropdown">
+                    
                     <span>Will Hanighen | amature programer and aquarium enthusiast</span>
                     <div class="dropdown-content">
                         <a href="/index.html">Main</a>
