--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
         <div class="outer-cursor"></div>
         <script src="trail.js"></script>
         <script src="cusror.js"></script>
+        <button onclick="goTop()" id="gotop" title="Go to top">Go to page top</button>
+        <script src="gotop.js"></script>
         <div class="container" id="top">
             <header>
                 <div class="header">
                     <div class="dropdown">
                         <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
-<div class="dropdown-content">
-                            <a href="/index.html">Main</a><a href="/resume.html">Resume</a><a href="/contact.html">Contact Info</a>
+                        <div class="dropdown-content">
+                            <a href="/index.html">Main</a>
+                            <a href="/resume.html">Resume</a>
+                            <a href="/contact.html">Contact Info</a>
                         </div>
                     </div>
                 </div>
@@ -48,7 +52,7 @@
                     </div>
                     <div class="image-wrapper">
                         <img src="img/placeholder.png" alt="This is a placeholder">
-<p>This is a development placehholder</p>
+                        <p>This is a development placehholder</p>
                     </div>
                     <!-- add more as needed (use div class immage-wrapper) -->
                 </div>
@@ -56,16 +60,15 @@
                 <div class="image-container">
                     <div class="image-wrapper">
                         <img src="img/at school.jpg" alt="Me at school">
-<p>Me at school</p>
+                        <p>Me at school</p>
                     </div>
                     <div class="image-wrapper">
                         <img src="img/placeholder.png" alt="This is a placeholder">
-<p>more artifacts from development</p>
+                        <p>more artifacts from development</p>
                     </div>
                     <!-- add more as needed (use div class immage-wrapper) -->
                 </div>
             </section>
-            <a href="#top" id="button">Go to page top</a>
         </div>
     </body>
 </html>
