--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,6 @@
     <title>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/ico" href="icon.ico">
-    <style>
-    </style>
 </head>
 
 <body>
@@ -16,6 +14,8 @@
     <div class="outer-cursor"></div>
     <script src="trail.js"></script>
     <script src="cusror.js"></script>
+    <button onclick="goTop()" id="gotop" title="Go to page top">Go to page top</button>
+    <script src="gotop.js"></script>
     <div class="container" id="top">
         <header>
             <div class="header">
@@ -32,13 +32,11 @@
 
         <br><br>
 
-        <h1>Will Hanighen</h1>
-        <h2>Amateur Programmer and Aquarium Enthusiast</h2>
-
         <section>
             <h3>Education</h3>
             <ul>
-                <li><a href="#placeholder">placeholder</a></li>
+                <li>Middle/JR High: <a href="https://cottageschool.org" target="_blank" rel="noopener noreferrer">The Cottage School</a></li>
+                <li>Highschool: <a href="https://cottageschool.org" target="_blank" rel="noopener noreferrer">The Cottage School</a> starting fall 2025</li>
                 <!-- add more as needed -->
             </ul>
         </section>
@@ -46,7 +44,7 @@
         <section>
             <h3>Work Experience</h3>
             <ul>
-                <li><a href="#placeholder">placeholder</a></li>
+                <li><p>none</p></li>
                 <!-- add more as needed -->
             </ul>
         </section>
@@ -54,8 +52,9 @@
         <section>
             <h3>Skills</h3>
             <ul>
-                <li>Coding</li><br>
-                <li>Aquarium research</li><br>
+                <li>Coding</li>
+                <li>Aquarium research</li>
+                <li>3d printing</li>
                 <!-- Add more skills as acquired -->
             </ul>
         </section>
@@ -63,14 +62,14 @@
         <section>
             <h3>Projects</h3>
             <ul>
-                <li><a href="#placeholder">placeholder</a></li>
-                <!-- add more as needed -->
+                <li><a href="https://replit.com/@WillHanighen/simple-grade-calculator?v=1#main.py" target="_blank" rel="noopener noreferrer">Simple Python grade calculator</a></li>
+                <li><a href="https://replit.com/@WillHanighen/temp-converter?v=1#main.py" target="_blank" rel="noopener noreferrer">Temperature converter</a></li>
+                <li><a href="https://replit.com/@WillHanighen/SAM-TTS?v=1" target="_blank" rel="noopener noreferrer">Software automated mouth TTS</a></li>
+                <li><a href="https://replit.com/@WillHanighen/wireframe-mouse-in-JS?v=1" target="_blank" rel="noopener noreferrer">Wireframe mouse demo</a></li>
+                <!-- add more links as needed -->
             </ul>
         </section>
 
-        <footer>
-            <a href="#top">Go to Page Top</a>
-        </footer>
     </div>
 </body>
 
