blogs and other smol fixes

--- a/blogs/My-first-proper-fish-tank copy.html
+++ b/blogs/My-first-proper-fish-tank copy.html
@@ -20,26 +20,26 @@
         <header>
             <div class="header">
                 <div class="dropdown">
-                    
-                    <span>Will Hanighen | amature programer and aquarium enthusiast</span>
+                    <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
                     <div class="dropdown-content">
                         <a href="/index.html">Main</a>
                         <a href="/blogs.html">Blogs</a>
                         <a href="/resume.html">Resume</a>
-                        <a href="/contact.html">Contact info</a>
+                        <a href="/contact.html">Contact Info</a>
                     </div>
                 </div>
             </div>
         </header>
-
         <br><br>
-
-        <h1>Contacts</h1>
-
-        <p><strong>William P. Hanighen</strong><br>willplays2022@gmail.com<br>(479) 353-5587<br><br>
-        <strong>Jean Hanighen</strong><br>jhanighen1@gmail.com<br>(404) 216-3716<br><br>
-        <strong>John Hanighen</strong><br>johnhanighen@gmail.com<br>(248) 228-6029</p>
-
+        <h1>My First Proper Fish Tank</h1>
+        <p>Published on April 23, 2024</p>
+        <article>
+            <p>When I was younger, I had really wanted a pet fish. This pet fish, my first pet, did not make it very long, as I was a negligible young boy.... </p>
+            <p>Here are some photos from my journey:</p>
+            <img src="/images/fish-tank-1.jpg" alt="My first fish tank">
+        </article>
+        <br><a href="/blogs.html">Back to Blogs</a>
+    </div>
 </body>
 
 </html>
