--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                         <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
                         <div class="dropdown-content">
                             <a href="/index.html">Main</a>
+                            <a href="/blogs.html">Blogs</a>
                             <a href="/resume.html">Resume</a>
                             <a href="/contact.html">Contact Info</a>
                         </div>
@@ -28,6 +29,7 @@
             </header>
             <br><br>
             <h1>Welcome to My Website!</h1>
+            <h4>If you are visiting my website for the first time and are confused as to how to get arround, hover your mouse cursor over the headder and select from the dropdown menu.</h4>
             <p>Hi! I'm Will Hanighen, an amateur programmer and aquarium enthusiast.</p>
             <section>
                 <h2>Programming Projects</h2>
@@ -58,10 +60,6 @@
                 </div>
                 <h2>Other photos</h2>
                 <div class="image-container">
-                    <div class="image-wrapper">
-                        <img src="img/at school.jpg" alt="Me at school">
-                        <p>Me at school</p>
-                    </div>
                     <div class="image-wrapper">
                         <img src="img/placeholder.png" alt="This is a placeholder">
                         <p>more artifacts from development</p>
