--- a/resume.html
+++ b/resume.html
@@ -23,6 +23,7 @@
                     <span>Will Hanighen | Amateur Programmer and Aquarium Enthusiast</span>
                     <div class="dropdown-content">
                         <a href="/index.html">Main</a>
+                        <a href="/blogs.html">Blogs</a>
                         <a href="/resume.html">Resume</a>
                         <a href="/contact.html">Contact Info</a>
                     </div>
