add support for game site and lisence

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,13 @@
         <header>
             <div class="header">
                 <div class="dropdown">
-                    
                     <span>Will Hanighen | amature programer and aquarium enthusiast</span>
                     <div class="dropdown-content">
                         <a href="/index.html">Main</a>
                         <a href="/blogs.html">Blogs</a>
                         <a href="/resume.html">Resume</a>
-                        <a href="/contact.html">Contact info</a>
+                        <a href="/contact.html">Contact Info</a>
+                        <a href="/html5games/index.html">HTML5 games</a>
                     </div>
                 </div>
             </div>
