--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                             <a href="/blogs.html">Blogs</a>
                             <a href="/resume.html">Resume</a>
                             <a href="/contact.html">Contact Info</a>
+                            <a href="/html5games/index.html">HTML5 games</a>
                         </div>
                     </div>
                 </div>
