--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="https://github.com/willhanighen" target="_blank" rel="noopener noreferrer">Main github account</a>
                     </li>
                     <li>
-                        <a href="#" target="_blank" rel="noopener noreferrer">placeholder</a>
+                        <a href="/html5games/index.html">My HTML5 game site</a>
                     </li>
                 </ul>
             </section>
