--- a/html5games/index.html
+++ b/html5games/index.html
@@ -34,7 +34,7 @@
                 <h2>Popular Games</h2>
                 <ul>
                     <li><a href="games/2048.html">2048</a></li>
-                    <li><a href="games/pacman.html">Packgam</a></li>
+                    <li><a href="games/pacman.html">Pacman</a></li>
                     <li><a href="games/eglrcraft.html">EaglercraftX</a></li>
                     <li><a href="games/tetris.html">Tetris</li>
                 </ul>
