--- a/html5games/index.html
+++ b/html5games/index.html
@@ -37,6 +37,7 @@
                     <li><a href="games/pacman.html">Pacman</a></li>
                     <li><a href="games/eglrcraft.html">EaglercraftX</a></li>
                     <li><a href="games/tetris.html">Tetris</li>
+                    <li><a href="games/slope3d.html">Slope 3D</li>
                 </ul>
         </div>
     </body>
