fix formatting error

--- a/html5games/games.html
+++ b/html5games/games.html
@@ -35,7 +35,7 @@
                     <li><a href="games/pacman.html">Pacman</a></li>
                     <li><a href="games/eglrcraft.html">EaglercraftX</a></li>
                     <li><a href="games/tetris.html">Tetris</a></li>
-                    <li><a href="games/slope3d.html"></a>Slope 3D</li>
+                    <li><a href="games/slope3d.html">Slope 3D</a></li>
                 </ul>
         </div>
     </body>
