--- a/404.html
+++ b/404.html
@@ -36,8 +36,7 @@
 
         <h1>Error 404</h1>
 
-        <h2>Sorry, the webpage you requested dose not exist or you do not have permission to view it.<br>Please
-        use the navbar up top</h2>
+        <h2>Sorry, the webpage you requested dose not exist or you do not have permission to view it.</h2>
 
 </body>
 </html>
