--- a/html5games/games/slope3d.html
+++ b/html5games/games/slope3d.html
@@ -30,6 +30,7 @@
         </header>
         <br><br>
         <h1>Welcome to my collection of HTML5/browser games!</h1>
+        <h2>THIS GAME IS CURRENTLY A WORK IN PROGRESS AND IS NON FUNCTIONAL<h2>
         <h4>Slope3D</h4>
         <div class="game-container">
             <iframe id="game-embed" src="slope3d/index.html" width="500" height="100%"></iframe>
