--- a/html5games/index.html
+++ b/html5games/index.html
@@ -36,8 +36,9 @@
                     <li><a href="games/2048.html">2048</a></li>
                     <li><a href="games/pacman.html">Pacman</a></li>
                     <li><a href="games/eglrcraft.html">EaglercraftX</a></li>
-                    <li><a href="games/tetris.html">Tetris</li>
-                    <li><a href="games/slope3d.html">Slope 3D</li>
+                    <li><a href="games/tetris.html">Tetris</a></li>
+                    <li><a href="games/slope3d.html">Slope 3D</a></li>
+                    <li><a href="games/snake.html">Snake</a></li>
                 </ul>
         </div>
     </body>
