--- a/html5games/games/snake/index.html
+++ b/html5games/games/snake/index.html
@@ -29,10 +29,10 @@
 
     <h1>Snake</h1>
     <div>
-        <canvas id="snake" width="320" height="240"></canvas>
+        <canvas id="snake" width="480" height="360"></canvas>
     </div>
 
-    <p>Control snake with arrow keys, WASD, or HJKL.</p>
+    <p>Control the snake with arrow keys, WASD, or HJKL.</p>
     <p>New food may appear under snake, uncoil to reveal.</p>
     <p>Collect the food to grow and increase speed.</p>
 
