--- a/html5games/games/snake/index.html
+++ b/html5games/games/snake/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <p>Control the snake with arrow keys, WASD, or HJKL.</p>
-    <p>New food may appear under snake, uncoil to reveal.</p>
+    <p>New food may appear under the snake, uncoil your snake to reveal it.</p>
     <p>Collect the food to grow and increase speed.</p>
 
     <script>
