--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <a href="https://github.com/willhanighen" target="_blank" rel="noopener noreferrer">Main github account</a>
                     </li>
                     <li>
+                        <a href="https://replit.com/@WillHanighen" target="_blank" rel="noopener noreferrer">School Replit account (unable to create new repls due to new limitations)</a>
+                    </li>
+                    <li>
                         <a href="/html5games/index.html">My HTML5 game site</a>
                     </li>
                 </ul>
