update 404 and resume

--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,8 @@
             <h3>Education</h3>
             <ul>
                 <li>Middle/JR High: <a href="https://cottageschool.org" target="_blank" rel="noopener noreferrer">The Cottage School</a></li>
-                <li>Highschool: <a href="https://cottageschool.org" target="_blank" rel="noopener noreferrer">The Cottage School</a> starting fall 2024</li>
+                <li>Highschool: <a href="https://cottageschool.org" target="_blank" rel="noopener noreferrer">The Cottage School</a></li>
+                <li>Collage/Higher Education: <a href="about:blank" target="_blank" rel="noopener noreferrer">N/A</a></li>
                 <!-- add more as needed -->
             </ul>
         </section>
@@ -46,7 +47,7 @@
         <section>
             <h3>Work Experience</h3>
             <ul>
-                <li><p>none</p></li>
+                <li><p>N/A</p></li>
                 <!-- add more as needed -->
             </ul>
         </section>
@@ -57,7 +58,7 @@
                 <li>Coding</li>
                 <li>Aquarium research</li>
                 <li>3d printing</li>
-                <!-- Add more skills as acquired -->
+                <!-- Add more as acquired -->
             </ul>
         </section>
 
@@ -68,7 +69,7 @@
                 <li><a href="https://replit.com/@WillHanighen/temp-converter?v=1#main.py" target="_blank" rel="noopener noreferrer">Temperature converter</a></li>
                 <li><a href="https://replit.com/@WillHanighen/SAM-TTS?v=1" target="_blank" rel="noopener noreferrer">Software automated mouth TTS</a></li>
                 <li><a href="https://replit.com/@WillHanighen/wireframe-mouse-in-JS?v=1" target="_blank" rel="noopener noreferrer">Wireframe mouse demo</a></li>
-                <!-- add more links as needed -->
+                <!-- add more as needed -->
             </ul>
         </section>
 
