--- a/404.html
+++ b/404.html
@@ -35,8 +35,8 @@
         <br><br>
 
         <h1>Error 404</h1>
-
         <h2>Sorry, the webpage you requested dose not exist or you do not have permission to view it.</h2>
+        <a href="/index.html">Return to main page</a>
 
 </body>
 </html>
