--- a/html5games/index.html
+++ b/html5games/index.html
@@ -37,7 +37,7 @@
                     <li><a href="games/pacman.html">Pacman</a></li>
                     <li><a href="games/eglrcraft.html">EaglercraftX</a></li>
                     <li><a href="games/tetris.html">Tetris</a></li>
-                    <li><a href="games/slope3d.html">Slope 3D</a></li>
+                    <li><a href="games/slope.html">Slope</a></li>
                     <li><a href="games/snake.html">Snake</a></li>
                 </ul>
         </div>
