--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <title>Will Hanighen | Amateur Programmer</title>
   <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="/js/ab-particles.min.js"></script>
-  <!-- Source: https://www.cssscript.com/demo/particle-animations-ab/ -->
-  <script src="/js/typewriter-main.js"></script>
+  <script src="/js/ab-particles.min.js"></script>  <!-- Source: https://www.cssscript.com/demo/particle-animations-ab/ -->
+  <script src="/js/typewriter-main.js"></script>  <!-- Source: https://github.com/mattboldt/typed.js -->
   <link href="/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -22,15 +21,18 @@
     <span>Will Hanighen, </span><span class="element"></span><br><br>
   </div>
 
-  <div class="carousel-container">
-    <div class="carousel">
-      <img src="imgs/9th-grade-yearbook.jpg" alt="Will Hanighen" style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
-      <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
-      <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
-      <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
-      <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
-      <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
-  
+  <section>
+    <div class="carousel-container">
+      <div class="carousel">
+        <img src="imgs/9th-grade-yearbook.jpg" alt="Will Hanighen" style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
+        <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
+        <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
+        <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
+        <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
+        <img src=imgs/placeholder.jpg alt="placeholder"style="max-width: 400px; max-height: 400px; width: auto; height: auto;">
+      </div>
+    </div>
+    </section>
   <canvas id="particles"></canvas>
 </body>
 
