--- a/projects/python/index.html
+++ b/projects/python/index.html
@@ -24,6 +24,7 @@
     <ul>
       <li><a href="/projects/python/temp-converter">Temprature Converter</a></li>
       <li><a href="/projects/python/grade-calc">Grade Calculator</a></li>
+      <li><a href="/projects/python/tic-tac-toe"></a>Tic-Tac-Toe</li>
     </ul>
   </section>
 
