Update index.html | google search console verification

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Will Hanighen | Amateur Programmer</title>
+  <meta name="google-site-verification" content="GTuV16iFM9CB15u6CyjeBU-Yjufa6owcLK3bigUL4PA" />
   <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="/js/ab-particles.min.js"></script>  <!-- Source: https://www.cssscript.com/demo/particle-animations-ab/ -->
